--- a/stylesheets/Content/Navbar.scss
+++ b/stylesheets/Content/Navbar.scss
@@ -2,3 +2,24 @@
     font-size: 25px;
 }
 
+body{
+    margin-top: 83px;
+}
+
+.navbar{
+    top:0;
+    z-index: 11;
+    position: fixed;
+    width: 100%;
+
+    li.nav-item{
+        &:hover , &:active{
+            border-left: 1px solid white;
+        }
+    }
+}
+
+img{
+    width: 50px;
+    height: 56px;
+}
