--- a/stylesheets/Content/Navbar.scss
+++ b/stylesheets/Content/Navbar.scss
@@ -11,10 +11,19 @@ body{
     z-index: 11;
     position: fixed;
     width: 100%;
+    background: white;
+    color: black;
+   
 
-    li.nav-item{
+    li.nav-item{ 
+        border: 2px solid transparent;
+        padding: 5px;
         &:hover , &:active{
-            border-left: 1px solid white;
+            border: 2px solid rgba(0, 0, 0,0.5);
+            background-color: rgba(86, 128, 233,0.8);
+        }
+        a{
+            color:black !important;
         }
     }
 }
