--- a/stylesheets/Content/Navbar.scss
+++ b/stylesheets/Content/Navbar.scss
@@ -14,6 +14,10 @@ body{
     background: white;
     color: black;
 
+    &:hover{
+        box-shadow: 0 4px 2px -2px gray;
+    }
+
     .dropdown-menu{
         a{
             &:hover{
